# lie-group-controllers

./: CMakeLists.txt  README.md  _controller_base_8h.html  _proportional_controller_2_controller_8h.html  _proportional_controller_2_controller_base_8h.html  _proportional_controller_8h.html  _proportional_derivative_controller_2_controller_8h.html  _proportional_derivative_controller_2_controller_base_8h.html  _proportional_derivative_controller_8h.html  _r_e_a_d_m_e_8md.html  annotated.html  class_lie_group_controllers_1_1_controller_base.html  class_lie_group_controllers_1_1_proportional_controller.html  class_lie_group_controllers_1_1_proportional_controller_base.html  class_lie_group_controllers_1_1_proportional_derivative_controller.html  class_lie_group_controllers_1_1_proportional_derivative_controller_base.html  dir_572b06816df385db17fccd0f0857f9ed.html  dir_6cb6b93f55098b55027ae9c2b2e4d3c4.html  dir_7cf2068de8351ca1dfc1191479a11cb9.html  dir_c98949ae2a9953617ad43c3ff61e9d25.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  index.html  modules.html  namespace_lie_group_controllers.html  namespace_lie_group_controllers_1_1internal.html  namespaces.html  namespacestd.html  pages.html  searchdata-v2.js  struct_lie_group_controllers_1_1internal_1_1traits.html  struct_lie_group_controllers_1_1internal_1_1traits_3_01_proportional_controller_3_01___lie_group_type_01_4_01_4.html  struct_lie_group_controllers_1_1internal_1_1traits_3_01_proportional_derivative_controller_3_01___lie_group_type_01_4_01_4.html  struct_lie_group_controllers_1_1internal_1_1traits_3_01const_01_t_01_4.html  traits_8h.html
.github/workflows/: ci.yml
cmake/: AddInstallRPATHSupport.cmake  AddLieGroupControllersUnitTest.cmake  AddUninstallTarget.cmake  Catch2Main.cpp.in  FindVALGRIND.cmake  InstallBasicPackageFiles.cmake  LieGroupControllersDependencies.cmake  LieGroupControllersFindOptionalDependencies.cmake
docs/: Doxyfile  conf.py
doxygen/: Doxyfile
doxygen/doc/html/: ControllerBase_8h.html  ControllerBase_8h__dep__incl.map  ControllerBase_8h__dep__incl.md5  ControllerBase_8h__incl.map  ControllerBase_8h__incl.md5  ControllerBase_8h_source.html  ProportionalController_2ControllerBase_8h.html  ProportionalController_2ControllerBase_8h__dep__incl.map  ProportionalController_2ControllerBase_8h__dep__incl.md5  ProportionalController_2ControllerBase_8h__incl.map  ProportionalController_2ControllerBase_8h__incl.md5  ProportionalController_2ControllerBase_8h_source.html  ProportionalController_2Controller_8h.html  ProportionalController_2Controller_8h__dep__incl.map  ProportionalController_2Controller_8h__dep__incl.md5  ProportionalController_2Controller_8h__incl.map  ProportionalController_2Controller_8h__incl.md5  ProportionalController_2Controller_8h_source.html  ProportionalController_8h.html  ProportionalController_8h.js  ProportionalController_8h__incl.map  ProportionalController_8h__incl.md5  ProportionalController_8h_source.html  ProportionalDerivativeController_2ControllerBase_8h.html  ProportionalDerivativeController_2ControllerBase_8h__dep__incl.map  ProportionalDerivativeController_2ControllerBase_8h__dep__incl.md5  ProportionalDerivativeController_2Controller_8h.html  (+94 more)
include/LieGroupControllers/: ProportionalController.h  ProportionalDerivativeController.h
tests/: CMakeLists.txt  ProportionalControllerTest.cpp  ProportionalDerivativeControllerTest.cpp
xml/: _controller_base_8h.xml  _proportional_controller_2_controller_8h.xml  _proportional_controller_2_controller_base_8h.xml  _proportional_controller_8h.xml  _proportional_derivative_controller_2_controller_8h.xml  _proportional_derivative_controller_2_controller_base_8h.xml  _proportional_derivative_controller_8h.xml  _r_e_a_d_m_e_8md.xml  class_lie_group_controllers_1_1_controller_base.xml  class_lie_group_controllers_1_1_proportional_controller.xml  class_lie_group_controllers_1_1_proportional_controller_base.xml  class_lie_group_controllers_1_1_proportional_derivative_controller.xml  class_lie_group_controllers_1_1_proportional_derivative_controller_base.xml  dir_572b06816df385db17fccd0f0857f9ed.xml  dir_6cb6b93f55098b55027ae9c2b2e4d3c4.xml  dir_7cf2068de8351ca1dfc1191479a11cb9.xml  dir_c98949ae2a9953617ad43c3ff61e9d25.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  indexpage.xml  namespace_lie_group_controllers.xml  namespace_lie_group_controllers_1_1internal.xml  namespacestd.xml  struct_lie_group_controllers_1_1internal_1_1traits.xml  struct_lie_group_controllers_1_1internal_1_1traits_3_01_proportional_controller_3_01___lie_group_type_01_4_01_4.xml  struct_lie_group_controllers_1_1internal_1_1traits_3_01_proportional_derivative_controller_3_01___lie_group_type_01_4_01_4.xml  struct_lie_group_controllers_1_1internal_1_1traits_3_01const_01_t_01_4.xml  traits_8h.xml
(+97 files in other folders)
